App is completed

--- a/SoundBoard/Base.lproj/Main.storyboard
+++ b/SoundBoard/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bA1-be-pTm">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sound View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SoundViewController" customModule="SoundBoard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,118 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djV-NL-oy2">
+                                <rect key="frame" x="163" y="84" width="49" height="30"/>
+                                <state key="normal" title="Record"/>
+                                <connections>
+                                    <action selector="recordTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="glh-M9-Fdd"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dx9-Rq-ig8">
+                                <rect key="frame" x="173" y="134" width="30" height="30"/>
+                                <state key="normal" title="Play"/>
+                                <connections>
+                                    <action selector="playTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hkv-rN-GW6"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="recording title..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ts1-Ab-Hi0">
+                                <rect key="frame" x="46" y="184" width="283" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vhp-I0-oZY">
+                                <rect key="frame" x="172.5" y="234" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3hC-ts-h5J"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Dx9-Rq-ig8" firstAttribute="top" secondItem="djV-NL-oy2" secondAttribute="bottom" constant="20" id="7HX-Wp-NRi"/>
+                            <constraint firstItem="ts1-Ab-Hi0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CKG-4S-v6c"/>
+                            <constraint firstItem="djV-NL-oy2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D0h-7R-JDV"/>
+                            <constraint firstItem="ts1-Ab-Hi0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="MNJ-KK-YBc"/>
+                            <constraint firstItem="Dx9-Rq-ig8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VxT-zV-wie"/>
+                            <constraint firstItem="djV-NL-oy2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Zb3-c9-JXs"/>
+                            <constraint firstItem="ts1-Ab-Hi0" firstAttribute="top" secondItem="Dx9-Rq-ig8" secondAttribute="bottom" constant="20" id="fOc-Vs-DuE"/>
+                            <constraint firstItem="Vhp-I0-oZY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fbi-dF-LLl"/>
+                            <constraint firstItem="Vhp-I0-oZY" firstAttribute="top" secondItem="ts1-Ab-Hi0" secondAttribute="bottom" constant="20" id="sao-T5-iGh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ts1-Ab-Hi0" secondAttribute="trailing" constant="30" id="yIz-GE-qAG"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="2P8-oa-3Y5"/>
+                    <connections>
+                        <outlet property="addButton" destination="Vhp-I0-oZY" id="ZX2-9x-xpX"/>
+                        <outlet property="nameTextField" destination="ts1-Ab-Hi0" id="Xov-bo-7G0"/>
+                        <outlet property="playButton" destination="Dx9-Rq-ig8" id="JqP-TP-a9s"/>
+                        <outlet property="recordButton" destination="djV-NL-oy2" id="m3k-Xe-hXQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="vuX-ZK-Jb8">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="xKc-gh-c24" customClass="ViewController" customModule="SoundBoard" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Utu-LR-UKv"/>
+                        <viewControllerLayoutGuide type="bottom" id="zWv-Zw-CXH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="B9X-Bl-oLH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sqm-wg-4eD">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Sqm-wg-4eD" firstAttribute="leading" secondItem="B9X-Bl-oLH" secondAttribute="leading" id="4aR-lz-THi"/>
+                            <constraint firstItem="zWv-Zw-CXH" firstAttribute="top" secondItem="Sqm-wg-4eD" secondAttribute="bottom" id="6ho-7X-ixu"/>
+                            <constraint firstItem="Sqm-wg-4eD" firstAttribute="top" secondItem="Utu-LR-UKv" secondAttribute="bottom" id="fjd-qU-icA"/>
+                            <constraint firstAttribute="trailing" secondItem="Sqm-wg-4eD" secondAttribute="trailing" id="hz1-Ky-WsQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3dc-vd-eLJ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="XDm-Ss-otH">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="8iE-LA-tv2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Sqm-wg-4eD" id="y0J-Iy-0Vg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bCa-P4-noo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="214" y="139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eRc-Re-7HZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bA1-be-pTm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QQe-4x-DG2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xKc-gh-c24" kind="relationship" relationship="rootViewController" id="saD-TZ-S6r"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eR0-wH-N7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-758" y="139"/>
         </scene>
     </scenes>
 </document>
